Sub Header: - main menu dropdown overlap issue with sub header bar

--- a/src/header/index.scss
+++ b/src/header/index.scss
@@ -79,6 +79,7 @@ body{
 	&.secondary-navbar{
 		top: $main-nav-height;
 		padding-left: 145px;
+		z-index: inherit;
 		min-height: $sub-nav-height;
 		height: $sub-nav-height;
 		background: $sub-nav-bg;
